Added more argo charts

--- a/argocd/apps/external-secrets.yaml
+++ b/argocd/apps/external-secrets.yaml
@@ -7,22 +7,25 @@ spec:
   - clusters: {}
   template:
     metadata:
-      name: '{{ name }}-external-secrets'
+      name: '{{name}}-external-secrets'
       labels:
         app: external-secrets
     spec:
       project: default
       source:
-        repoURL: https://external-secrets.github.io/kubernetes-external-secrets/
-        targetRevision: "6.3.0"
-        chart: kubernetes-external-secrets
+        repoURL: https://charts.external-secrets.io
+        targetRevision: "v0.6.0-rc1"
+        chart: external-secrets
         helm:
           releaseName: external-secrets
           values: |
-            env:
-              AWS_REGION: "{{ metadata.annotations.awsRegion }}"
-              LOG_LEVEL: "warn"
-              POLLER_INTERVAL_MILLISECONDS: "30000"
+            extraEnv:
+              - name: AWS_REGION
+                value: "{{ metadata.annotations.awsRegion }}"
+              - name: LOG_LEVEL
+                value: "warn"
+              - name: POLLER_INTERVAL_MILLISECONDS
+                value: "30000"
             fullnameOverride: external-secrets
             replicaCount: 1
             resources:
@@ -32,16 +35,16 @@ spec:
               requests:
                 cpu: 1000m
                 memory: 256Mi
-            securityContext:
+            podSecurityContext:
               fsGroup: 65534
             serviceAccount:
               annotations:
-                "eks.amazonaws.com/role-arn": "arn:aws:iam::{{ metadata.annotations.awsAccountID }}:role/{{ name }}-external-secrets"
+                "eks.amazonaws.com/role-arn": "arn:aws:iam::{{ metadata.annotations.awsAccountID }}:role/{{name}}-external-secrets"
               create: true
               name: external-secrets
 
       destination:
-        name: '{{ name }}'
+        name: '{{name}}'
         namespace: external-secrets
       syncPolicy:
         syncOptions:
