fixed secret auth

--- a/argocd/charts/atlantis/templates/secret-store.yaml
+++ b/argocd/charts/atlantis/templates/secret-store.yaml
@@ -9,6 +9,6 @@ spec:
       service: SecretsManager # Configure service to be Secrets Manager
       region: us-east-2   # Region where the secret is.
       auth:
-        auth:
         serviceAccount:
           name: "atlantis"
+        remoteNamespace: {{ .Release.Namespace }}
