Updated secrets api

--- a/argocd/charts/atlantis/templates/secret-store.yaml
+++ b/argocd/charts/atlantis/templates/secret-store.yaml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1alpha1
+apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: atlantis-secret-store
@@ -9,5 +9,6 @@ spec:
       service: SecretsManager # Configure service to be Secrets Manager
       region: us-east-2   # Region where the secret is.
       auth:
-        serviceAccount:
-          name: "atlantis"
+        jwt:
+          serviceAccountRef:
+            name: atlantis
