--- a/argocd/charts/atlantis/templates/external-secret.yaml
+++ b/argocd/charts/atlantis/templates/external-secret.yaml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1alpha1
 kind: ExternalSecret
 metadata:
   name: atlantis-external-secret
@@ -9,8 +9,8 @@ spec:
     name: atlantis-secret-store #The secret store name we have just created.
     kind: SecretStore
   target:
-    name: atlantis-webhook # Secret name in k8s
+    name: atlantis-vcs # Secret name in k8s
   data:
-  - secretKey: token # which key it's going to be stored
+  - secretKey: github_token # which key it's going to be stored
     remoteRef:
       key: atlantis # Our secret-name goes here
