--- a/argocd/charts/atlantis/templates/external-secret.yaml
+++ b/argocd/charts/atlantis/templates/external-secret.yaml
@@ -9,7 +9,7 @@ spec:
     name: atlantis-secret-store #The secret store name we have just created.
     kind: SecretStore
   target:
-    name: atlantis-webhook # Secret name in k8s
+    name: atlantis-vcs # Secret name in k8s
   data:
   - secretKey: github_token # which key it's going to be stored
     remoteRef:
