added webhook secret

--- a/argocd/charts/atlantis/templates/external-secret.yaml
+++ b/argocd/charts/atlantis/templates/external-secret.yaml
@@ -14,3 +14,6 @@ spec:
   - secretKey: github_token # which key it's going to be stored
     remoteRef:
       key: atlantis # Our secret-name goes here
+  - secretKey: github_secret # which key it's going to be stored
+    remoteRef:
+      key: atlantis # Our secret-name goes here
