--- a/argocd/charts/atlantis/values.yaml
+++ b/argocd/charts/atlantis/values.yaml
@@ -40,10 +40,13 @@ atlantis:
          - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
 
   service:
-    type: LoadBalancer
+    type: NodePort
+    port: 80
+    targetPort: 4141
+    loadBalancerIP: null
 
   ingress:
-    enabled: false
+    enabled: true
 
   dataStorage: 15Gi
 
