--- a/argocd/charts/atlantis/templates/ingress.yaml
+++ b/argocd/charts/atlantis/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: atlantis
+  namespace: {{ .Release.Namespace }}
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -11,7 +12,10 @@ spec:
   rules:
     - http:
         paths:
-          - path: /*
-            backend:
-              serviceName: atlantis
-              servicePort: 80
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: atlantis
+              port:
+                number: 80
