--- a/argocd/charts/atlantis/values.yaml
+++ b/argocd/charts/atlantis/values.yaml
@@ -40,11 +40,11 @@ atlantis:
          - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
 
   service:
-    type: ClusterIP
-    port: 8080
+    type: LoadBalancer
+    port: 80
 
   ingress:
-    enabled: true
+    enabled: false
 
   dataStorage: 15Gi
 
