--- a/argocd/charts/atlantis/templates/external-secret.yaml
+++ b/argocd/charts/atlantis/templates/external-secret.yaml
@@ -10,10 +10,6 @@ spec:
     kind: SecretStore
   target:
     name: atlantis-vcs # Secret name in k8s
-  data:
-  - secretKey: github_token # which key it's going to be stored
-    remoteRef:
-      key: atlantis # Our secret-name goes here
-  - secretKey: github_secret # which key it's going to be stored
-    remoteRef:
-      key: atlantis # Our secret-name goes here
+  dataFrom:
+  - extract:
+      key: atlantis
