--- a/argocd/apps/atlantis.yaml
+++ b/argocd/apps/atlantis.yaml
@@ -4,7 +4,7 @@ metadata:
   name: atlantis
 spec:
   generators:
-  - clusters: {}
+  - clusters: wiz-demo-infra
   template:
     metadata:
       name: '{{name}}-atlantis'
