--- a/argocd/apps/aws-load-balancer-controller.yaml
+++ b/argocd/apps/aws-load-balancer-controller.yaml
@@ -4,7 +4,7 @@ metadata:
   name: aws-load-balancer-controller
 spec:
   generators:
-  - clusters: {}
+  - clusters: wiz-demo-infra 
   template:
     metadata:
       name: '{{name}}-aws-load-balancer-controller'
