--- a/argocd/apps/external-secrets.yaml
+++ b/argocd/apps/external-secrets.yaml
@@ -4,7 +4,7 @@ metadata:
   name: external-secrets
 spec:
   generators:
-  - clusters: {}
+  - clusters: wiz-demo-infra 
   template:
     metadata:
       name: '{{name}}-external-secrets'
