--- a/argocd/apps/atlantis.yaml
+++ b/argocd/apps/atlantis.yaml
@@ -4,7 +4,10 @@ metadata:
   name: atlantis
 spec:
   generators:
-  - clusters: wiz-demo-infra
+  - clusters:
+      selector:
+        matchLabels:
+          argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: '{{name}}-atlantis'
