--- a/argocd/apps/aws-load-balancer-controller.yaml
+++ b/argocd/apps/aws-load-balancer-controller.yaml
@@ -4,7 +4,10 @@ metadata:
   name: aws-load-balancer-controller
 spec:
   generators:
-  - clusters: wiz-demo-infra 
+  - clusters:
+      selector:
+        matchLabels:
+          argocd.argoproj.io/secret-type: cluster 
   template:
     metadata:
       name: '{{name}}-aws-load-balancer-controller'
