--- a/argocd/charts/atlantis/values.yaml
+++ b/argocd/charts/atlantis/values.yaml
@@ -67,5 +67,5 @@ atlantis:
   extraVolumes:
     - name: gcp-creds
       secret:
-        secretName: gcp-creds
+        secretName: atlantis-vcs
         
