--- a/argocd/apps/aws-load-balancer-controller.yaml
+++ b/argocd/apps/aws-load-balancer-controller.yaml
@@ -17,7 +17,7 @@ spec:
       project: default
       source:
         repoURL: https://aws.github.io/eks-charts
-        targetRevision: 1.4.1
+        targetRevision: "1.4.5"
         chart: aws-load-balancer-controller
         helm:
           releaseName: aws-load-balancer-controller
