--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -55,17 +55,37 @@ projects:
     when_modified: ["*.tf", "config.tfvars"]
   apply_requirements: [mergeable]
 
-# ## azure ##
-# - name: azure-demo
-#   dir: terraform/aws/apps/bucket
-#   terraform_version: v1.1.9
-#   workspace: azure-demo
-#   workflow: ws
-#   autoplan:
-#     when_modified: ["*.tf", "config.tfvars"]
-#   apply_requirements: [mergeable]
+## azure ##
+- name: azure-demo
+  dir: terraform/azure/apps/rg
+  terraform_version: v1.1.9
+  workspace: azure-demo
+  workflow: azure
+  autoplan:
+    when_modified: ["*.tf", "config.tfvars"]
+  apply_requirements: [mergeable]
 
-## Non-default workflows:
+# Non-default workflows:
+workflows:
+  azure:
+    plan:
+      steps:
+      - env:
+          name: ARM_CLIENT_ID
+          command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-1 | jq --raw-output .SecretString | jq -r ".azure_creds" | jq -r ".appId"'
+      - env:
+          name: ARM_CLIENT_SECRET
+          command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-1 | jq --raw-output .SecretString | jq -r ".azure_creds" | jq -r ".password"'
+      - env:
+          name: ARM_TENANT_ID
+          command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-1 | jq --raw-output .SecretString | jq -r ".azure_creds" | jq -r ".tenant"'
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
+      - run: if [ "$ARM_CLIENT_ID" != "null" ] && [ "$ARM_CLIENT_SECRET" != "null" ] && [ "$ARM_TENANT_ID" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -var "arm_client_id=${ARM_CLIENT_ID}" -var "arm_client_secret=${ARM_CLIENT_SECRET}" -var "arm_tenant_id=${ARM_TENANT_ID}" -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
+    apply:
+      steps:
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
+
 # workflows:
 #   datadog:
 #     plan:
