--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -6,22 +6,22 @@ parallel_apply: true
 projects:
 ########## VPC ##########
 - name: wiz-demo-infra-vpc
-  dir: terraform/aws/common/vpc
+  dir: terraform/aws/shared/vpc
   terraform_version: v1.1.9
   workspace: wiz-demo-infra
-  workflow: ws
+  workflow: aws
   autoplan:
-    when_modified: ["*.tf", "config.tfvars"]
+    when_modified: ["*.tf", "*.tfvars"]
   apply_requirements: [mergeable]
 
 ########## EKS ##########
 - name: wiz-demo-infra-eks
-  dir: terraform/aws/common/eks
+  dir: terraform/aws/shared/eks
   terraform_version: v1.1.9
   workspace: wiz-demo-infra
-  workflow: ws
+  workflow: aws
   autoplan:
-    when_modified: ["*.tf", "config.tfvars"]
+    when_modified: ["*.tf", "*.tfvars"]
   apply_requirements: [mergeable]
 
 ########## IAM Atlantis ##########
@@ -29,7 +29,7 @@ projects:
   dir: terraform/aws/account/iam/atlantis
   terraform_version: v1.1.9
   workspace: wiz-demo-infra
-  workflow: ws
+  workflow: aws
   autoplan:
     when_modified: ["*.tf", "config.tfvars"]
   apply_requirements: [mergeable]
@@ -40,9 +40,9 @@ projects:
   dir: terraform/aws/apps/bucket
   terraform_version: v1.1.9
   workspace: aws-demo
-  workflow: ws
+  workflow: aws
   autoplan:
-    when_modified: ["*.tf", "config.tfvars"]
+    when_modified: ["*.tf", "*.tfvars"]
   apply_requirements: [mergeable]
 
 ## gcp ##
@@ -50,9 +50,9 @@ projects:
   dir: terraform/gcp/apps/bucket
   terraform_version: v1.1.9
   workspace: gcp-demo
-  workflow: ws
+  workflow: gcp
   autoplan:
-    when_modified: ["*.tf", "config.tfvars"]
+    when_modified: ["*.tf", "*.tfvars"]
   apply_requirements: [mergeable]
 
 ## azure ##
@@ -62,11 +62,20 @@ projects:
   workspace: azure-demo
   workflow: azure
   autoplan:
-    when_modified: ["*.tf", "config.tfvars"]
+    when_modified: ["*.tf", "*.tfvars"]
   apply_requirements: [mergeable]
 
 # Non-default workflows:
 workflows:
+  aws:
+    plan:
+      steps:
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE
+    apply:
+      steps:
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
   azure:
     plan:
       steps:
@@ -84,24 +93,19 @@ workflows:
           command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-2 | jq --raw-output .SecretString | jq -r ".azure_creds" | jq -r ".tenant"'
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
-      - run: if [ "$ARM_CLIENT_ID" != "null" ] && [ "$ARM_CLIENT_SECRET" != "null" ] && [ "$ARM_SUBSCRIPTION_ID" != "null" ] && [ "$ARM_TENANT_ID" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -var "arm_client_id=${ARM_CLIENT_ID}" -var "arm_client_secret=${ARM_CLIENT_SECRET}" -var "arm_subscription_id=${ARM_SUBSCRIPTION_ID}" -var "arm_tenant_id=${ARM_TENANT_ID}" -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
+      - run: if [ "$ARM_CLIENT_ID" != "null" ] && [ "$ARM_CLIENT_SECRET" != "null" ] && [ "$ARM_SUBSCRIPTION_ID" != "null" ] && [ "$ARM_TENANT_ID" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -var "arm_client_id=${ARM_CLIENT_ID}" -var "arm_client_secret=${ARM_CLIENT_SECRET}" -var "arm_subscription_id=${ARM_SUBSCRIPTION_ID}" -var "arm_tenant_id=${ARM_TENANT_ID}" -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
     apply:
       steps:
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
-
-# workflows:
-#   datadog:
-#     plan:
-#       steps:
-#       - env:
-#           name: DATADOG_APP_KEY
-#           command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-1 | jq --raw-output .SecretString | jq -r ".datadog.datadog_app_key"'
-#       - env:
-#           name: DATADOG_API_KEY
-#           command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-1 | jq --raw-output .SecretString | jq -r ".datadog.datadog_api_key"'
-#       - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
-#       - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
-#       - run: if [ "$DATADOG_APP_KEY" != "null" ] && [ "$DATADOG_API_KEY" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -var "datadog_app_key=${DATADOG_APP_KEY}" -var "datadog_api_key=${DATADOG_API_KEY}" -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./config.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
-#     apply:
-#       steps:
-#       - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
+  gcp:
+    plan:
+      steps:
+      - env:
+          name: GOOGLE_CREDENTIALS
+          command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-2 | jq --raw-output .SecretString | jq -r ".gcp_creds"'
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
+      - run: if [ "$GOOGLE_CREDENTIALS" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
+    apply:
+      steps:
+      - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
