--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -93,7 +93,7 @@ workflows:
           command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-2 | jq --raw-output .SecretString | jq -r ".azure_creds" | jq -r ".tenant"'
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
-      - run: if [ "$ARM_CLIENT_ID" != "null" ] && [ "$ARM_CLIENT_SECRET" != "null" ] && [ "$ARM_SUBSCRIPTION_ID" != "null" ] && [ "$ARM_TENANT_ID" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -var "arm_client_id=${ARM_CLIENT_ID}" -var "arm_client_secret=${ARM_CLIENT_SECRET}" -var "arm_subscription_id=${ARM_SUBSCRIPTION_ID}" -var "arm_tenant_id=${ARM_TENANT_ID}" -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
+      - run: if [ -v "$ARM_CLIENT_ID" ] && [ -v "$ARM_CLIENT_SECRET" ] && [ -v "$ARM_SUBSCRIPTION_ID" ] && [ -v "$ARM_TENANT_ID" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else echo "Please add the required env vars for the azure terraform provider"; fi
     apply:
       steps:
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
@@ -105,7 +105,7 @@ workflows:
           command: 'aws secretsmanager get-secret-value --secret-id atlantis --region us-east-2 | jq --raw-output .SecretString | jq -r ".gcp_creds"'
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} init -input=false -no-color
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE} || terraform${ATLANTIS_TERRAFORM_VERSION} workspace new ${WORKSPACE} && terraform${ATLANTIS_TERRAFORM_VERSION} workspace select -no-color ${WORKSPACE}
-      - run: if [ "$GOOGLE_CREDENTIALS" != "null" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; fi
+      - run: if [ -v "$GOOGLE_CREDENTIALS" ]; then terraform${ATLANTIS_TERRAFORM_VERSION} plan -var-file=./${WORKSPACE}.tfvars -input=false -refresh -no-color -parallelism=50 -out $PLANFILE; else echo "Please add the required env vars for the google terraform provider"; fi
     apply:
       steps:
       - run: terraform${ATLANTIS_TERRAFORM_VERSION} apply -no-color -parallelism=50 $PLANFILE
